testdata/baselines/reference/compiler/strictBestCommonSupertype.errors.txt
strictBestCommonSupertype(4,15): error TS1128: Declaration or statement expected.
strictBestCommonSupertype(4,15): error TS1005: ',' expected.
strictBestCommonSupertype(4,15): error TS1128: Declaration or statement expected.
strictBestCommonSupertype(4,15): error TS1005: '>' expected.
strictBestCommonSupertype(4,15): error TS1005: '{' expected.
strictBestCommonSupertype(4,15): error TS1005: '}' expected.

==== strictBestCommonSupertype (6 errors) ====
    
    // https://github.com/microsoft/typescript-go/issues/1222
    
    class Store<T = object> {
                  ~
!!! error TS1128: Declaration or statement expected.
                  ~
!!! error TS1005: ',' expected.
                  ~
!!! error TS1128: Declaration or statement expected.
                  ~
!!! error TS1005: '>' expected.
                  ~
!!! error TS1005: '{' expected.
                  ~
!!! error TS1005: '}' expected.
        select<K>(mapFn: (state: T) => K) {};
    }
    
    const store: Store = inject(Store);
    
    function inject<T>(token: ProviderToken<T>): T {
        return {} as T;
    }
    
    interface Type<T> extends Function {
        new (...args: any[]): T;
    }
    
    type ProviderToken<T> = Type<T> | AbstractType<T>;
    
    interface AbstractType<T> extends Function {
        prototype: T;
    }
    
